--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,10 @@
 body {
     color: #333;
+    background-image: url("../images/bg xur.jpg")
   }
   
   header {
-    background: #40bcd9;
+    background: #131d1f;
     font-weight: bold;
     color: white;
     padding: 7px 20px;
@@ -20,32 +21,18 @@ body {
     margin: 0 auto;
   }
   
-  button {
-    margin: 5px;
-    color: #333;
-    border-radius: 3px;
-    cursor: pointer;
-  }
+ 
   
   #cart {
     border: 1px solid #333;
-    height: 340px;
-    padding: 5px;
+    padding: 25px;
+    width: 650px;
     background: #dfe3e6;
     margin-bottom: 10px;
   }
   
   
-  .task-color {
-    color: #333;
-    padding: 10px;
-    margin: 5px;
-    float: left;
-    width: 380px;
-    background: white;
-    box-shadow: 0 1px 0 rgba(9,45,66,.25);
-    border-radius: 3px;
-  }
+
   
   #clear {
     background: #40bcd9;
