destiny theme adjusted

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body {
     color: white;
-    background-image: url("../images/bg xur.jpg")
+    background-image: url("../images/bg xur.png")
   }
   
   header {
